# ml_dl_tutorial

./: .gitignore  README.md  download_datasets_and_models.sh  pyproject.toml
dataset/text_sentiment_analysis/: dev.txt  test.txt  train.txt
src/deep_learning/cnn/lenet_scratch/: config.yaml  run.py
src/deep_learning/cnn/mytrainer_timm/resnet50/: config.yaml  eval.py  train.py  train_and_eval.py
src/deep_learning/dnn/: config.yaml  mlp.py  mlp_trainer.py
src/machine_learning/bayes/: bow_bayes.py  scratch_bayes.py  tf-idf_bayes.py
src/machine_learning/cluster/: k-mean_and_dbscan.ipynb
src/machine_learning/decision_tree/: dt_rf_xgboost.ipynb
src/machine_learning/mlp/: mlp_mnist_classification.ipynb  mlp_scratch.py  mlp_scratch_advanced.py
src/machine_learning/simple_regression/: linear_regression.ipynb  logistic_regression.ipynb
src/machine_learning/support_vector_machine/: svm.ipynb
src/utils/: configuration.py  dataset.py  trainer.py
