[project]
name = "ml-dl-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "triton==3.3.1",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.2",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "datasets>=3.6.0",
    "torchvision>=0.22.1",
    "lightning>=2.5.2",
    "torchmetrics>=1.7.4",
    "timm>=1.0.16",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 120
